# -Projet-Web-templating-engine-for-graph-databases-in-functional-language

./: HTMLBuilder.hs  README.txt  READ_ME.txt  Web-templating.cabal  generateAll.hs  serveur.hs
src/: HTMLBuilder.hs  HTMLBuilderUtils.hs  Main.hs  generateAll.hs
